# mimir

./: .gitignore  CODE_OF_CONDUCT.md  CONTRIBUTING.md  LICENSE  README.md  SECURITY.md  conftest.py  pyproject.toml
.github/workflows/: tests.yml
bench/: claude_cli.py  claude_judge.py  harness.py  live.py  loop.py  scoreboard.py
bench/scoreboard/: data.js  index.html
demo/: deck.html
docs/superpowers/: README.md
docs/superpowers/plans/: 2026-07-05-scoreboard-benchmark.md  2026-07-15-mimir-power-efficiency.md  2026-07-18-generic-hook-adapter.md  2026-07-19-production-readiness-pass.md
docs/superpowers/specs/: 2026-07-05-scoreboard-benchmark-design.md  2026-07-16-dev-loop-test-speed-design.md  2026-07-16-drop-cognee-vector-index-design.md  2026-07-16-recall-tokenize-cache-design.md  2026-07-17-auto-consolidate-design.md  2026-07-18-generic-hook-adapter-design.md  2026-07-18-live-bench-efficiency-design.md  2026-07-19-production-readiness-pass-design.md  2026-07-19-recall-retrieval-gate-design.md
hermes_memory_plugin/: __init__.py  plugin.yaml
hermes_plugin/: __init__.py  plugin.yaml
mimir/: __init__.py  auto_consolidate.py  capture.py  cli.py  consolidate.py  hermes_memory.py  hook_install.py  mcp_server.py  models.py  serve.py  store.py  store_cognee.py  store_io.py  store_semantic.py
tests/: test_auto_consolidate.py  test_capture.py  test_claude_cli_model.py  test_claude_judge.py  test_cli.py  test_consolidate.py  test_harness.py  test_hermes_memory.py  test_hermes_plugin.py  test_live.py  test_loop.py  test_mcp_server.py  test_scoreboard.py  test_serve.py  test_store.py  test_store_cognee.py  test_store_semantic.py
