[build-system]
requires = ["setuptools>=68"]
build-backend = "setuptools.build_meta"

[project]
name = "mimir-agent-memory"
version = "0.1.1"
description = "A developer-facing memory layer for AI agents (MCP server)."
readme = "README.md"
requires-python = ">=3.10"
license = {text = "Apache-2.0"}
dependencies = []

[project.urls]
Homepage = "https://github.com/kirrns/mimir"
Repository = "https://github.com/kirrns/mimir"
Issues = "https://github.com/kirrns/mimir/issues"

[project.optional-dependencies]
dev = ["pytest>=8"]
mcp = ["mcp>=1.0", "lancedb"]
embed = ["fastembed"]

[project.scripts]
mimir = "mimir.cli:main"
mimir-hook = "mimir.cli:hook_main"
mimir-hook-cline = "mimir.cli:hook_main_cline"
mimir-serve = "mimir.cli:serve_main"

[tool.setuptools.packages.find]
include = ["mimir*"]

[tool.pytest.ini_options]
testpaths = ["tests"]
addopts = "-q -m 'not slow'"
markers = ["slow: real env probes (lancedb import, fastembed model download) -- run with -m ''"]
